@@ -5,7 +5,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: loading.test,v 1.7 2005/07/19 07:14:22 mdejong Exp $
+# RCS: @(#) $Id: loading.test,v 1.8 2005/07/19 23:10:55 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -434,7 +434,7 @@ puts [info nameofexecutable]
 exit 0
 }
     exec $env(JAVA) -classpath $env(CLASSPATH) tests.JavaEval $script
-} [string map {\\ /} $env(JAVA)]
+} "[string map {\\ /} $env(JAVA)].exe"
 
 test loading-8.2 {load into Java, invoke puts, return 0 and compare to expected 0} {
     set script {
